Fix Select2 dropdown visibility and model enable

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.select2-container--default .select2-results__option {
+    color: #0f172a;
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+    color: #ffffff;
+}
